--- a/onnx/Cargo.toml
+++ b/onnx/Cargo.toml
@@ -17,6 +17,7 @@ maintenance = { status = "actively-developed" }
 bytes = "0.5"
 derive-new = "0.5"
 error-chain = "0.12"
+libmath = "0.2.1"
 log = "0.4"
 num-integer = "0.1"
 prost = "0.6"
