--- a/onnx/Cargo.toml
+++ b/onnx/Cargo.toml
@@ -18,6 +18,7 @@ bytes = "0.5"
 derive-new = "0.5"
 educe = "0.4"
 error-chain = "0.12"
+libmath = "0.2.1"
 log = "0.4"
 num-integer = "0.1"
 prost = "0.6"
