--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -21,6 +21,7 @@ educe = "=0.4.11" # locked for rust 1.41.0
 error-chain = "0.12"
 half = "1.3"
 itertools = "0.9"
+libmath = "0.2.1"
 log = "0.4"
 maplit = "1.0"
 ndarray = { version = "=0.13.0" }
